WIP button styling

--- a/src/App.css
+++ b/src/App.css
@@ -7,20 +7,6 @@
 
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-image: url(../public/spiceracker_bg.png);
   background-size: 50%;
   background-repeat: repeat;
@@ -34,32 +20,12 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
 @media only screen and (max-width: 768px) {
 
-  .App-header {
-    background-image: url(../public/spiceracker_bg.png);
+  .App {
     background-size: cover;
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    font-family: 'remissis';
-    color: white;
   }
 
 }
