--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,9 @@
 .App {
   text-align: center;
   background-image: url(../public/spiceracker_bg.png);
-  background-size: 50%;
-  background-repeat: repeat;
+  background-size: cover;
   min-height: 100vh;
+  background-repeat: repeat;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,12 +20,46 @@
   color: white;
 }
 
+.modal {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background-color: white;
+  color: black;
+  top: 10vh;
+  left: 10vw;
+  width: 80vw;
+  height: 80vh;
+  position: fixed;
+  z-index: 100;
+  align-content: center;
+  align-self: center;
+  align-items: center;
+  justify-content: space-between;
+}
 
-@media only screen and (max-width: 768px) {
+.modal p {
+  background-color: inherit;
+  margin-bottom: 0px;
+}
+
+.cancel-submit-bar {
+  display: flex;
+  justify-content: space-between;
+  width: inherit;
+}
+
+.cancel-submit-bar button {
+  border: 1px solid black;
+  border-radius: 10%;
+  margin: 10px;
+}
+
+
+@media only screen and (min-width: 768px) {
 
   .App {
-    background-size: cover;
-    min-height: 100vh;
+    background-size: 50%;
   }
 
 }
