--- a/src/components/LibraryModal.css
+++ b/src/components/LibraryModal.css
@@ -1,14 +1,11 @@
-.library-modal {
-  background-color: white;
-  color: black;
-  top: 10vh;
-  left: 10vw;
-  width: 80vw;
-  height: 80vh;
-  position: fixed;
-  z-index: 100;
+.spice-name-input {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  margin-top: 0;
+  margin-bottom: 25px;;
 }
 
-.library-modal p {
-  background-color: inherit;
+.spice-name-input p {
+  margin-top: 0;
 }
