--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,8 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  background-color: white;
+  background-image: url(../public/spiceracker_bg_white.png);
+  background-size: 352%;
   color: black;
   top: 10vh;
   left: 10vw;
@@ -50,7 +51,6 @@
 }
 
 .cancel-submit-bar button {
-  border: 1px solid black;
   border-radius: 10%;
   margin: 10px;
 }
